[package]
name = "ovpnfile"
description = "A crate for parsing openvpn config files"
repository = "https://github.com/alexjg/rs-ovpnfile"
license = "MIT/Apache-2.0"
version = "0.1.2"
authors = ["Alex Good"]
readme = "README.md"

[dependencies]
error-chain = "0.12.4"
regex = "1"
lazy_static = "1"

[dev-dependencies]
spectral = "0.6.0"

